<resources>
    <string name="app_name">NaSA Notes</string>
    <string name="RecDel">Recently Delete</string>
    <string name="newnote">New Note</string>
    <string name="del">Delete</string>
    <string name="select">Select All</string>
    <string name="recover">Recover</string>
    <string name="alarm">Add alarm</string>

    <string-array name="occurence">
        <item>Once</item>
        <item>Weekly</item>
    </string-array>

    <string-array name="pref_alarm_play_time_entries">
        <item>10 seconds</item>
        <item>30 seconds</item>
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>3 minutes</item>
        <item>5 minutes</item>
    </string-array>

    <string-array name="pref_alarm_play_time_values">
        <item>10</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>180</item>
        <item>300</item>
    </string-array>
</resources>
