<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nasanotes.nasanotes.MainActivity">

    <TextView
        android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="Notes"
        android:textColor="@color/colorPrimary"
        android:textSize="26dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_alignTop="@+id/RecDel"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/RecDel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RecDel"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/newnote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:text="@string/newnote"
        android:textSize="18dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/del"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:text="Delete"
        android:layout_alignBaseline="@+id/newnote"
        android:layout_alignBottom="@+id/newnote"
        android:layout_alignStart="@+id/select" />

    <CheckBox
        android:id="@+id/select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select"
        android:textSize="24dp"
        android:layout_below="@+id/note"
        android:layout_alignStart="@+id/note" />
    <ListView
            android:id="@+id/alarm_list"
            style="@style/widget"
            android:layout_height="361dp"
        android:layout_below="@+id/select"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/newnote" />


</RelativeLayout>
